R118: - Fixed AE Forever for real this time (maybe)

R114: - Fixed APs not being drawn on map (closes #12)
	  - Added sound feedback to crack attempts (updates #69 - awaiting added preference)
	  - Changed invalid location position to impossible values (closes #68 part 1)
	  - Improved auto-center behaviour for map and added shortcut key (closes #68 part 2 & #71)
	  - added commented pseudocode for trace inclusion in KML export (refer #72)
	  - added zoom limit patch for map download (re-closes #70)

R112: - fixing a security issue, discovered by Stefan Esser. was introduced with R54

R111: - Added Austrailan Map Server Closes #70 

R108: - Fixed #35, #36 and #54.  When not hopping, still set channel in hopping method.  This avoids a nasty race condition.

R107: - Fixed #51 - deleting a net causes kismac to crash
	  - Fixed #9 - used Geoffs patch to fix GPS update...

R106: - Fixed some silly warnings as described in #61 note, this is not the patch from 61 because it was incorrect

R102: - improved permanent airport extreme enabling & installing (even more)
	  - including removal
	  - fixed serveral small bugs
	  - added new "build system"

R101: - changes in spanish translation

R100:  This is a big commit, a present for R100.  
       -Added Client IP Address detection.  I need to think about ways to detect the ip of the ap if possible.
              --Fixed bug in existing sourceIPAsString() where we were adding sizeof(WLFrame) to the value instead of to the pointer.
       -Fixed # 29 columns are no longer selected when resizing.
       -Moved the search catagory menu into the Search cell where it belongs
       -Better matching to vendors.db  (some macs in vendors.db are in the form xx:xx and we were not checking against these)
       -AE Passive mode forever now reads setting directly from the .kext.  This should make sure our settings always reflect what is really set.
       -Add ae passive forever setting to installer for both install and remove.