@@ -1,3 +1,5 @@
+R119 - Advanced Prefs from themacuser
+
 R118: - Fixed AE Forever for real this time (maybe)
 
 R114: - Fixed APs not being drawn on map (closes #12)
